--- a/board/templates/board/write.html
+++ b/board/templates/board/write.html
@@ -5,7 +5,7 @@
     <title>글작성</title>
 </head>
 <body>
-    <form action="/board/new/" method="post">
+    <form action="{% url 'board:write'%}" method="post">
         <label>제목 : </label><input type="text" name="title"><br>
         <label>글쓴이 : </label><input type="text" name="id"><br>
         <label>글내용 : </label><textarea name="content"></textarea><br>
