클래스형뷰로 게시글 전체조회, 상세보기, 생성 기능 구현

--- a/board/templates/board/detail.html
+++ b/board/templates/board/detail.html
@@ -5,7 +5,7 @@
     <title>글 상세보기</title>
 </head>
 <body>
-    글제목 : {{board.title}}<br>
+    글제목 : {{object.title}}<br>
     글쓴이 : {{board.id}}<br>
     글내용 : {{board.content}}<br>
     작성일 : {{board.dt}}<br>
