클래스형뷰-폼클래스 사용한 글수정 기능 구현

--- a/board/templates/board/write.html
+++ b/board/templates/board/write.html
@@ -5,7 +5,7 @@
     <title>글작성</title>
 </head>
 <body>
-    <form action="{% url 'board:new'%}" method="post">
+    <form action="" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="작성하기">
